version/0.10/_sources/examples/06-Multiphysics/index.rst.txt


.. _sphx_glr_examples_06-Multiphysics:

Multiphysics examples
~~~~~~~~~~~~~~~~~~~~~
These examples use PyAEDT to create some multiphysics workflows. They might use
an electromagnetic tool like HFSS or Maxwell and a thermal or structural tool
like Icepak or Mechanical.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Let&#x27;s consider a design where some components are simulated in HFSS with a full 3D model, while others are simulated in Circuit as lumped elements. The electrical simulation is done by placing the HFSS design into a Circuit design as a subcomponent and by connecting the lumped components to its ports.">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_Circuit-HFSS-Icepak-coupling_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-Multiphysics_Circuit-HFSS-Icepak-coupling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: Circuit-HFSS-Icepak coupling workflow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To provide the advanced postprocessing features needed for this example, the numpy, matplotlib, and pyvista packages must be installed on the machine.">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_Hfss_Icepak_Coupling_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-Multiphysics_Hfss_Icepak_Coupling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: HFSS-Icepak multiphysics analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multiphysics: HFSS-Mechanical multiphysics analysis">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_Hfss_Mechanical_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-Multiphysics_Hfss_Mechanical.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: HFSS-Mechanical multiphysics analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Steps to follow Step 1: Simulate coil loaded by empty phantom: Scale input to coil ports to produce desired background SAR of 1 W/kg at location that will later contain the implant. Step 2: Simulate coil loaded by phantom containing implant in proper location: View SAR in tissue surrounding implant. Step 3: Thermal simulation: Link HFSS to transient thermal solver to find temperature rise in tissue near implant vs. time.">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_MRI_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-Multiphysics_MRI.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: HFSS-Mechanical MRI analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multiphysics: Maxwell 3D - Icepak electrothermal analysis">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_Maxwell3D_Icepak_2Way_Coupling_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-Multiphysics_Maxwell3D_Icepak_2Way_Coupling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: Maxwell 3D - Icepak electrothermal analysis</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/06-Multiphysics/Circuit-HFSS-Icepak-coupling
   /examples/06-Multiphysics/Hfss_Icepak_Coupling
   /examples/06-Multiphysics/Hfss_Mechanical
   /examples/06-Multiphysics/MRI
   /examples/06-Multiphysics/Maxwell3D_Icepak_2Way_Coupling

